--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Martin Gamaliel Alvarez Gomez <malvarez@cespt.gob.mx>",
   "license": "MIT",
   "scripts": {
-    "build:server": "webpack --config webpack.server.js"
+    "build:server": "webpack -p --mode production --config webpack.server.js",
+    "dev": "webpack-dev-server --open --mode development --config webpack.client.js"
   },
   "dependencies": {
     "@babel/core": "^7.8.7",
@@ -17,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
