--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+### User ###
+public
+
 # Created by https://www.gitignore.io/api/node,react
 # Edit at https://www.gitignore.io/?templates=node,react
 
