--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
