Code refactoring, Move files to more logic folders

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:client": "webpack -p --mode production --env production --config webpack.client.js",
     "build:server": "webpack -p --mode production --config webpack.server.js",
     "build": "concurrently \"yarn:build:client\" \"yarn:build:server\"",
-    "dev": "webpack-dev-server --open --mode development --config webpack.client.js"
+    "dev": "webpack-dev-server --open --mode development --config webpack.client.js",
+    "start": "node dist/server"
   },
   "dependencies": {
     "@babel/core": "^7.8.7",
