--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^1.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
