--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-proxy-middleware": "^1.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-helmet": "^6.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
